--- a/has-law/src/App.css
+++ b/has-law/src/App.css
@@ -136,15 +136,24 @@
     letter-spacing: 0.5px;
   }
   .hero-background {
-    background-image: url("./assets/heroImage.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    /* background-image: url("./assets/heroImage.png");
+    background-repeat: no-repeat; */
+    /* background-position: center;
+    background-size: cover; */
     height: 100vh;
     min-height: 25em;
     position: relative;
     width: 100%;
   }
+  #heroVideo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .footer-part {
     width: "33%";
   }
@@ -408,6 +417,12 @@
     width: 100%;
     background-color: black;
   }
+  #heroVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .footer-part {
     width: 100%;
     padding-right: 32px;
