--- a/has-law/src/App.css
+++ b/has-law/src/App.css
@@ -62,6 +62,15 @@
   text-overflow: ellipsis;
   max-height: 200px; /* Adjust the max-width as needed */
 }
+/* Hide scrollbar for Firefox */
+html {
+  scrollbar-width: none;
+}
+
+/* Hide scrollbar for Webkit (Chrome, Safari) */
+body::-webkit-scrollbar {
+  display: none;
+}
 
 @media (min-width: 768px) {
   .scrolling-container {
@@ -270,15 +279,16 @@
     height: 423px;
   }
   .experts-section-img-each {
-    height: 419px;
-    width: 321px;
+    width: 278px;
+    height: 423px;
+    flex-shrink: 0;
   }
   .experts-section-name-each {
     height: 419px;
     width: 321px;
   }
   .experts-section-detail-img-each {
-    width: 321px;
+    width: 278px;
     height: 423px;
     flex-shrink: 0;
   }
@@ -542,23 +552,23 @@
     background-color: #f4f4f4;
   }
   .experts-section-img {
-    overflow: scroll;
+    overflow: auto;
   }
   .experts-section-img-each {
     width: 100%;
     min-width: 258px;
-    height: 337px;
+    min-height: 337px;
     /* flex-shrink: 0; */
   }
   .experts-section-name-each {
     width: 100%;
     min-width: 258px;
-    height: 337px;
+    height: 423px;
     /* flex-shrink: 0; */
   }
   .experts-section-detail-img-each {
-    width: 346px;
-    height: 448px;
+    width: 100%;
+    height: 423px;
     flex-shrink: 0;
   }
   .experts-section-detail-name-each {
