fixing styling hero video

--- a/has-law/src/App.css
+++ b/has-law/src/App.css
@@ -438,8 +438,8 @@ body::-webkit-scrollbar {
     /* background-repeat: no-repeat;
     background-position: center;
     background-size: cover; */
-    /* height: 100vh; */
-    /* min-height: 25em; */
+    height: 100vh;
+    min-height: 25em;
     position: relative;
     width: 100%;
     background-color: black;
@@ -604,7 +604,9 @@ body::-webkit-scrollbar {
     width: 100%;
   }
   .hero-div {
-    height: 416px;
+    height: 100vh;
+    top: 0;
+    position: relative;
   }
   .navbar-logo {
     width: 48px;
