--- a/has-law/src/App.css
+++ b/has-law/src/App.css
@@ -614,8 +614,8 @@ body::-webkit-scrollbar {
     position: relative;
   }
   .navbar-logo {
-    width: 48px;
-    height: 45px;
+    width: auto;
+    height: auto;
     flex-shrink: 0;
   }
 
