--- a/has-law/src/App.css
+++ b/has-law/src/App.css
@@ -102,7 +102,7 @@ body::-webkit-scrollbar {
   .text-hero {
     color: var(--Gray-Second, #f8f8f8);
     text-align: center;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
@@ -113,7 +113,7 @@ body::-webkit-scrollbar {
     /* color: #515a5f; */
 
     /* Paragraph/Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -124,7 +124,7 @@ body::-webkit-scrollbar {
     color: #fff;
 
     /* Paragraph/Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -136,7 +136,7 @@ body::-webkit-scrollbar {
     color: var(--Red, #f00);
 
     /* Heading/Heading 3 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -145,7 +145,7 @@ body::-webkit-scrollbar {
   }
   .text-title-services {
     color: var(--Black, #292d32);
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -186,7 +186,7 @@ body::-webkit-scrollbar {
     color: #515a5f;
 
     /* Paragraph/Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -198,7 +198,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
     text-overflow: ellipsis;
     /* white-space: nowrap; */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
@@ -209,7 +209,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
 
     /* Heading/Heading 2 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
@@ -224,7 +224,7 @@ body::-webkit-scrollbar {
     text-align: center;
 
     /* Heading/Heading 3 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -254,7 +254,7 @@ body::-webkit-scrollbar {
     text-align: center;
 
     /* Heading/Heading 3 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -265,7 +265,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
 
     /* Paragraph/Medium */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -319,7 +319,7 @@ body::-webkit-scrollbar {
     color: var(--Red, #f00);
 
     /* Heading/Heading 3 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -386,7 +386,7 @@ body::-webkit-scrollbar {
   .text-hero {
     color: var(--Gray-Second, #f8f8f8);
     text-align: center;
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -397,7 +397,7 @@ body::-webkit-scrollbar {
     /* color: #515a5f; */
 
     /* Paragraph/Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -408,7 +408,7 @@ body::-webkit-scrollbar {
     color: #fff;
 
     /* Paragraph/Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -420,7 +420,7 @@ body::-webkit-scrollbar {
     color: var(--Red, #f00);
 
     /* Heading/Heading 3 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
@@ -429,7 +429,7 @@ body::-webkit-scrollbar {
   }
   .text-title-services {
     color: var(--Black, #292d32);
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
@@ -468,7 +468,7 @@ body::-webkit-scrollbar {
   .publication-date {
     color: var(--Gray, #515a5f);
     /* Paragraph/Extra Small */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -480,7 +480,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
     text-overflow: ellipsis;
     /* white-space: nowrap; */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
@@ -491,7 +491,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
 
     /* Heading/Heading 4 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -507,7 +507,7 @@ body::-webkit-scrollbar {
     text-align: center;
 
     /* Heading/Heading 4 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -537,7 +537,7 @@ body::-webkit-scrollbar {
     text-align: center;
 
     /* Heading/Heading 4 */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -548,7 +548,7 @@ body::-webkit-scrollbar {
     color: var(--Black, #292d32);
 
     /* Paragraph/Medium */
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -598,7 +598,7 @@ body::-webkit-scrollbar {
   }
   .services-sectiont-detail-paragraph-title {
     color: var(--Red, #f00);
-    font-family: Helvetica;
+    font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
